# tung_playground

./: .gitignore  CLAUDE.md  FRAMEWORK_README.md  LICENSE  MUJOCO_LOG.TXT  README.md  pyproject.toml
.github/workflows/: docs.yml
config/: default.yaml
docs/: book.toml
docs/book/html/: 404.html  framework.html  index.html  introduction.html  pipeline-demo-results.html  print.html  searchindex.js  toc.html  toc.js  visualization.html
docs/book/html/api/: core.html  hero.html  pipeline.html  plugin.html  (+1 more)
docs/src/: SUMMARY.md  introduction.md  pipeline-demo-results.md  visualization.md
docs/src/api/: hero.md  pipeline.md
docs/src/architecture/: overview.md  pipeline.md
docs/src/examples/: complete-demo.md  custom-pipeline.md
docs/src/getting-started/: first-hero.md  installation.md  quick-start.md
docs/src/integration/: isaac-lab.md  meshy-ai.md  mujoco.md  partcrafter.md  wonder3d.md
docs/src/pipeline/: decomposition.md  generation.md  rigging.md  simulation.md  training.md  urdf.md
docs/src/troubleshooting/: debugging.md  performance.md
examples/: README.md  README_meshy.md  configurable_pipeline_demo.py  mesh_conversion_example.py  meshy_3d_generation_example.py  simulate_pipeline_output.py  template_matching_example.py  test_visualization.py  tripo_segmentation_example.py
examples/basic/: README.md  basic_usage.py  simple_test.py
examples/generators/: README.md  meshy_3d_generation_example.py  meshy_generation_demo.py  tripo_3d_generation_example.py
examples/pipeline/: README.md  configurable_pipeline_demo.py  full_pipeline_demo.py
examples/visualization/: README.md  hero_visualization_demo.py  visualize_hero.py
heroes/complexo/: model.xml
heroes/oleg/: model.xml
heroes/tralalero_tralala/: model.xml
heroes/tung_sahur_demo/: hero.json  policy.pkl  robot.urdf  scene.xml  skeleton.json
heroes/tung_tung_sahur/: model.xml
heroes/tungtungtungtungtungtungtungtungtung_sahur/: hero.json  material.mtl
heroes/villain/: model.xml
src/tung_playground/: __init__.py
src/tung_playground/core/: __init__.py  exceptions.py  hero.py  pipeline.py
src/tung_playground/decomposition/: __init__.py  base.py  mock_decomposer.py  tripo_decomposer.py
src/tung_playground/generation/: __init__.py  base.py  meshy_generator.py  mock_generator.py  tripo_generator.py
src/tung_playground/matching/: __init__.py  base.py  template_matcher.py
src/tung_playground/plugins/: __init__.py  mock_plugins.py  registry.py
src/tung_playground/rigging/: __init__.py  base.py  mock_rigger.py
src/tung_playground/simulation/: __init__.py  base.py  mock_mujoco.py
src/tung_playground/templates/: __init__.py  base.py  biped.py  quadruped.py
src/tung_playground/training/: __init__.py  base.py  mock_trainer.py
src/tung_playground/urdf/: __init__.py  base.py  mock_builder.py  template_builder.py
src/tung_playground/utils/: __init__.py  config.py  file_manager.py  logging.py  mesh_converter.py  validation.py
src/tung_playground/visualization/: __init__.py  urdf_visualizer.py
tung_playground/: hero.py  renderer.py  simulator.py  world.py  world.xml
(+43 files in other folders)
