# Define the build system configuration.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Define the project configuration.
[project]
name = "tung_playground"
description = """
Make your AI generated heros live in the simulator.
"""
dynamic = ["version"]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
dependencies = [
    "mujoco",
    "glfw"
]
license-files = ["LICENSE"]
authors = [
    {name = "Chenyu Cao", email = "ruziniuuuuu@gmail.com"}
]
maintainers = [
    {name = "Chenyu Cao", email = "ruziniuuuuu@gmail.com"}
]
keywords = [
    "mujoco",
    "robotics"
]

[tool.hatch.version]
path = "tung_playground/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true