# Define the build system configuration.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Define the project configuration.
[project]
name = "tung_playground"
description = """
Make your AI generated heroes live in the simulator.
"""
dynamic = ["version"]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
dependencies = [
    "mujoco"
]
license-files = ["LICENSE"]
authors = [
    {name = "Chenyu Cao", email = "ruziniuuuuu@gmail.com"}
]
maintainers = [
    {name = "Chenyu Cao", email = "ruziniuuuuu@gmail.com"}
]
keywords = [
    "mujoco",
    "robotics"
]

[tool.hatch.version]
path = "src/tung_playground/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/tung_playground"]

[tool.hatch.metadata]
allow-direct-references = true